--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".TasksActivity" />
-        <activity android:name=".AddAppointmentActivity">
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".FinanceActivity" />
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TasksActivity" />
+        <activity android:name=".AddAppointmentActivity" />
     </application>
 
 </manifest>
