--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,15 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    // CardView
+    implementation "androidx.cardview:cardview:1.0.0"
+
     // Persian Calendar
     implementation 'com.github.samanzamani.persiandate:PersianDate:0.8'
 
     // Persian Date Picker
     implementation 'ir.scriptestan.jalalimaterialdatetimepicker:library:0.1.2'
+
+    // Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
