--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     // CardView
     implementation "androidx.cardview:cardview:1.0.0"
 
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
     // Persian Calendar
     implementation 'com.github.samanzamani.persiandate:PersianDate:0.8'
 
