--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClinicsActivity"></activity>
+        <activity android:name=".AddPatientActivity"></activity>
+        <activity android:name=".PatientsActivity" />
+        <activity android:name=".AddFinanceActivity" />
+        <activity android:name=".AddClinicActivity" />
+        <activity android:name=".ClinicsActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".FinanceActivity" />
         <activity android:name=".HomeActivity">
