--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.PatientDetailActivity"></activity>
+        <activity android:name=".views.PatientDetailsActivity"></activity>
         <activity android:name=".views.AddPatientActivity" />
         <activity android:name=".views.PatientsActivity" />
         <activity
