--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.PatientDetailsActivity"></activity>
+        <activity android:name=".views.RegisterActivity"></activity>
+        <activity android:name=".views.ConfirmCodeActivity" />
+        <activity android:name=".views.IntroActivity" />
+        <activity android:name=".views.PhoneRegisterActivity" />
+        <activity android:name=".views.PatientDetailsActivity" />
         <activity android:name=".views.AddPatientActivity" />
         <activity android:name=".views.PatientsActivity" />
         <activity
