--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
