--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pixium.brandent">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".Brandent"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".views.RegisterActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".views.RegisterActivity" />
         <activity android:name=".views.ConfirmCodeActivity" />
-        <activity android:name=".views.IntroActivity" />
+        <activity android:name=".views.IntroActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".views.PhoneRegisterActivity" />
         <activity android:name=".views.PatientDetailsActivity" />
         <activity android:name=".views.AddPatientActivity" />
@@ -26,11 +36,7 @@
         <activity android:name=".views.ProfileActivity" />
         <activity android:name=".views.FinanceActivity" />
         <activity android:name=".views.HomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".views.TasksActivity" />
         <activity android:name=".views.AddAppointmentActivity" />
