--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,32 +12,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.pixium.clinitick.views.MonthlyFinanceActivity" />
-        <activity android:name="com.pixium.clinitick.views.RegisterActivity" />
-        <activity android:name="com.pixium.clinitick.views.ConfirmCodeActivity" />
-        <activity android:name="com.pixium.clinitick.views.IntroActivity">
+        <activity android:name=".views.EditAppointmentActivity"></activity>
+        <activity android:name=".views.MonthlyFinanceActivity" />
+        <activity android:name=".views.RegisterActivity" />
+        <activity android:name=".views.ConfirmCodeActivity" />
+        <activity android:name=".views.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.pixium.clinitick.views.PhoneRegisterActivity" />
-        <activity android:name="com.pixium.clinitick.views.PatientDetailsActivity" />
-        <activity android:name="com.pixium.clinitick.views.AddPatientActivity" />
-        <activity android:name="com.pixium.clinitick.views.PatientsActivity" />
+        <activity android:name=".views.PhoneRegisterActivity" />
+        <activity android:name=".views.PatientDetailsActivity" />
+        <activity android:name=".views.AddPatientActivity" />
+        <activity android:name=".views.PatientsActivity" />
         <activity
-            android:name="com.pixium.clinitick.views.AddEditFinanceActivity"
-            android:parentActivityName="com.pixium.clinitick.views.ClinicActivity" />
-        <activity android:name="com.pixium.clinitick.views.AddEditClinicActivity" />
+            android:name=".views.AddEditFinanceActivity"
+            android:parentActivityName=".views.ClinicActivity" />
+        <activity android:name=".views.AddEditClinicActivity" />
         <activity
-            android:name="com.pixium.clinitick.views.ClinicActivity"
+            android:name=".views.ClinicActivity"
             android:launchMode="singleTop" />
-        <activity android:name="com.pixium.clinitick.views.ProfileActivity" />
-        <activity android:name="com.pixium.clinitick.views.FinanceActivity" />
-        <activity android:name="com.pixium.clinitick.views.HomeActivity"></activity>
-        <activity android:name="com.pixium.clinitick.views.TasksActivity" />
-        <activity android:name="com.pixium.clinitick.views.AddAppointmentActivity" />
+        <activity android:name=".views.ProfileActivity" />
+        <activity android:name=".views.FinanceActivity" />
+        <activity android:name=".views.HomeActivity" />
+        <activity android:name=".views.TasksActivity" />
+        <activity android:name=".views.AddAppointmentActivity" />
     </application>
 
 </manifest>
