--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = '2.3.0'
-    def room_version = "2.2.6"
+    def lifecycle_version = '2.3.1'
+    def room_version = "2.3.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -60,7 +60,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
 
     // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
 
     // Persian Calendar
     implementation 'com.github.samanzamani.persiandate:PersianDate:0.8'
@@ -76,4 +76,7 @@ dependencies {
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
