--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".views.AddEditTaskActivity"></activity>
+        <activity android:name=".views.AddEditTaskActivity" />
         <activity android:name=".views.EditAppointmentActivity" />
         <activity android:name=".views.MonthlyFinanceActivity" />
         <activity android:name=".views.RegisterActivity" />
@@ -40,6 +40,8 @@
         <activity android:name=".views.HomeActivity" />
         <activity android:name=".views.TasksActivity" />
         <activity android:name=".views.AddAppointmentActivity" />
+
+        <receiver android:name=".AlertReceiver" />
     </application>
 
 </manifest>
