--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".views.WebViewActivity"></activity>
         <activity android:name=".views.AddEditTaskActivity" />
         <activity android:name=".views.EditAppointmentActivity" />
         <activity android:name=".views.MonthlyFinanceActivity" />
