--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId 'com.pixium.clinitick'
+        applicationId 'com.brandent.clinitick'
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
@@ -31,7 +31,7 @@ dependencies {
     def room_version = "2.3.0"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -60,7 +60,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
 
     // RecyclerView
-    implementation "androidx.recyclerview:recyclerview:1.2.0"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     // Persian Calendar
     implementation 'com.github.samanzamani.persiandate:PersianDate:0.8'
