--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,44 +5,45 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.brandent.clinitick.Clinitick"
+        android:name=".Clinitick"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name="com.brandent.clinitick.views.WebViewActivity" />
-        <activity android:name="com.brandent.clinitick.views.AddEditTaskActivity" />
-        <activity android:name="com.brandent.clinitick.views.EditAppointmentActivity" />
-        <activity android:name="com.brandent.clinitick.views.MonthlyFinanceActivity" />
-        <activity android:name="com.brandent.clinitick.views.RegisterActivity" />
-        <activity android:name="com.brandent.clinitick.views.ConfirmCodeActivity" />
-        <activity android:name="com.brandent.clinitick.views.IntroActivity">
+        <activity android:name=".views.ForgotPassActivity" />
+        <activity android:name=".views.WebViewActivity" />
+        <activity android:name=".views.AddEditTaskActivity" />
+        <activity android:name=".views.EditAppointmentActivity" />
+        <activity android:name=".views.MonthlyFinanceActivity" />
+        <activity android:name=".views.RegisterActivity" />
+        <activity android:name=".views.ConfirmCodeActivity" />
+        <activity android:name=".views.IntroActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.brandent.clinitick.views.PhoneRegisterActivity" />
-        <activity android:name="com.brandent.clinitick.views.PatientDetailsActivity" />
-        <activity android:name="com.brandent.clinitick.views.AddPatientActivity" />
-        <activity android:name="com.brandent.clinitick.views.PatientsActivity" />
+        <activity android:name=".views.PhoneRegisterActivity" />
+        <activity android:name=".views.PatientDetailsActivity" />
+        <activity android:name=".views.AddPatientActivity" />
+        <activity android:name=".views.PatientsActivity" />
         <activity
-            android:name="com.brandent.clinitick.views.AddEditFinanceActivity"
-            android:parentActivityName="com.brandent.clinitick.views.ClinicActivity" />
-        <activity android:name="com.brandent.clinitick.views.AddEditClinicActivity" />
+            android:name=".views.AddEditFinanceActivity"
+            android:parentActivityName=".views.ClinicActivity" />
+        <activity android:name=".views.AddEditClinicActivity" />
         <activity
-            android:name="com.brandent.clinitick.views.ClinicActivity"
+            android:name=".views.ClinicActivity"
             android:launchMode="singleTop" />
-        <activity android:name="com.brandent.clinitick.views.ProfileActivity" />
-        <activity android:name="com.brandent.clinitick.views.FinanceActivity" />
-        <activity android:name="com.brandent.clinitick.views.HomeActivity" />
-        <activity android:name="com.brandent.clinitick.views.TasksActivity" />
-        <activity android:name="com.brandent.clinitick.views.AddAppointmentActivity" />
+        <activity android:name=".views.ProfileActivity" />
+        <activity android:name=".views.FinanceActivity" />
+        <activity android:name=".views.HomeActivity" />
+        <activity android:name=".views.TasksActivity" />
+        <activity android:name=".views.AddAppointmentActivity" />
 
-        <receiver android:name="com.brandent.clinitick.AlertReceiver" />
+        <receiver android:name=".AlertReceiver" />
     </application>
 
 </manifest>
